force-app/main/default/objects/position__c/fields/Emploee_Id__c.field-meta.xml
<CustomField>
    <fullName>Emploee_Id__c</fullName>
    <label>Employment type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contract</fullName>
            </value>
            <value>
                <fullName>permanent</fullName>
            </value>
            <value>
                <fullName>contract to hire</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>