force-app/main/default/objects/position__c/fields/Hiring_Manager__c.field-meta.xml
<CustomField>
    <fullName>Hiring_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Hiring Manager</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Hiring_Manager__c.Location__c</field>
            <operation>equals</operation>
            <valueField>$Source.Location__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Hiring_Manager__c</referenceTo>
    <relationshipLabel>positions</relationshipLabel>
    <relationshipName>positions</relationshipName>
    <type>Lookup</type>
</CustomField>