force-app/main/default/objects/position__c/fields/HR_email_address__c.field-meta.xml
<CustomField>
    <fullName>HR_email_address__c</fullName>
    <label>HR email address</label>
    <required>true</required>
    <type>Email</type>
</CustomField>