force-app/main/default/objects/position__c/fields/HR_phone_number__c.field-meta.xml
<CustomField>
    <fullName>HR_phone_number__c</fullName>
    <label>HR phone number</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>