force-app/main/default/objects/position__c/fields/maximum_Budget__c.field-meta.xml
<CustomField>
    <fullName>maximum_Budget__c</fullName>
    <label>maximum Budget</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>