force-app/main/default/objects/position__c/fields/Minimum_pay__c.field-meta.xml
<CustomField>
    <fullName>Minimum_pay__c</fullName>
    <label>Minimum Pay</label>
    <precision>7</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>