force-app/main/default/objects/position__c/fields/Number_of_vacencies__c.field-meta.xml
<CustomField>
    <fullName>Number_of_vacencies__c</fullName>
    <label>Number of vacencies</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>