force-app/main/default/objects/position__c/fields/of_days_left__c.field-meta.xml
<CustomField>
    <fullName>of_days_left__c</fullName>
    <formula>Milestone_Date__c  -  TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># of days left</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>