force-app/main/default/objects/position__c/fields/Passport_reqired__c.field-meta.xml
<CustomField>
    <fullName>Passport_reqired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Passport required</label>
    <type>Checkbox</type>
</CustomField>