force-app/main/default/objects/position__c/fields/Position_Description__c.field-meta.xml
<CustomField>
    <fullName>Position_Description__c</fullName>
    <label>Position Description</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>