force-app/main/default/objects/position__c/fields/Position_s_Age__c.field-meta.xml
<CustomField>
    <fullName>Position_s_Age__c</fullName>
    <formula>TODAY() -  Open_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Position&apos;s Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>