force-app/main/default/objects/position__c/fields/Position_status__c.field-meta.xml
<CustomField>
    <fullName>Position_status__c</fullName>
    <label>Position status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New position</fullName>
                <default>true</default>
                <label>New position</label>
            </value>
            <value>
                <fullName>Open approved</fullName>
            </value>
            <value>
                <fullName>In progress</fullName>
            </value>
            <value>
                <fullName>On hold</fullName>
            </value>
            <value>
                <fullName>Recruited</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>