force-app/main/default/objects/position__c/fields/Reference_Id__c.field-meta.xml
<CustomField>
    <fullName>Reference_Id__c</fullName>
    <displayFormat>{00000}</displayFormat>
    <label>Reference Id</label>
    <type>AutoNumber</type>
</CustomField>