force-app/main/default/objects/position__c/fields/Skills_required__c.field-meta.xml
<CustomField>
    <fullName>Skills_required__c</fullName>
    <label>Skills required</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>