force-app/main/default/objects/position__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Emploee_Id__c</columns>
    <columns>Open_Date__c</columns>
    <columns>Position_s_Age__c</columns>
    <columns>of_days_left__c</columns>
    <columns>HR_email_address__c</columns>
    <columns>HR_phone_number__c</columns>
    <columns>Location__c</columns>
    <columns>Minimum_pay__c</columns>
    <columns>Number_of_vacencies__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>